# core-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: test-feature.yml  test-release.yml  test-slim.yml  test.yml  update-rust-toolchain.py  update-rust-toolchain.yml
entrypoints/rocketpack-compiled-example/: gen.sh  rocketpack.yaml
entrypoints/rocketpack-compiled-example/rpfs/example/: first.rpf
entrypoints/rocketpack-compiled-example/rust/: Cargo.toml
entrypoints/rocketpack-compiled-example/rust/src/: main.rs
entrypoints/rocketpack-compiler/: Cargo.toml
entrypoints/rocketpack-compiler/data/: rocketpack.yaml
entrypoints/rocketpack-compiler/data/rpfs/: example.rpf
entrypoints/rocketpack-compiler/src/: codegen.rs  config.rs  error.rs  main.rs  parser.rs
entrypoints/rocketpack-compiler/src/codegen/: rust.rs
entrypoints/rocketpack-compiler/src/parser/: ast.rs  lexer.rs
modules/base/: Cargo.toml  src.rs
modules/base/src/: clock.rs  error.rs  file_lock.rs  lib.rs  macro.rs  net.rs  random_bytes.rs  random_string.rs  sleeper.rs  terminable.rs  tsid.rs
modules/base/src/serde/: base64.rs
modules/cloud/: Cargo.toml
modules/cloud/src/: aws.rs  error.rs  lib.rs  secrets.rs
modules/cloud/src/aws/: s3.rs  secrets.rs  ses.rs  sqs.rs
modules/cloud/src/aws/s3/: s3_client.rs  s3_client_mock.rs
modules/cloud/src/aws/secrets/: secrets_reader.rs
modules/cloud/src/aws/ses/: ses_sender.rs  ses_sender_mock.rs
modules/cloud/src/aws/sqs/: sqs_receiver.rs  sqs_sender.rs  sqs_sender_mock.rs
modules/cloud/src/gcp/: secret.rs
modules/cloud/src/gcp/secret/: secret_reader.rs
modules/cloud/src/secret/aws/: aws_secret_reader.rs
modules/cloud/src/secrets/: aws.rs  secrets_reader.rs
modules/cloud/src/secrets/aws/: aws_secrets_reader.rs
modules/image/: Cargo.toml
modules/image/src/: lib.rs
modules/migration/: Cargo.toml
modules/migration/src/: error.rs  lib.rs  migrator.rs  postgres.rs  sqlite.rs
modules/migration/tests/: migrator.rs  postgres.rs
modules/omnikit/: Cargo.toml
modules/omnikit/src/: error.rs  lib.rs  model.rs  prelude.rs  service.rs
modules/omnikit/src/model/: omni_addr.rs  omni_agreement.rs  omni_hash.rs  omni_sign.rs
modules/omnikit/src/service/: connection.rs  converter.rs  remoting.rs  rpc.rs
modules/omnikit/src/service/connection/: codec.rs  secure.rs
modules/omnikit/src/service/connection/codec/: framed_receiver.rs  framed_sender.rs
modules/omnikit/src/service/connection/framed/: sender.rs
modules/omnikit/src/service/connection/secure/: auth.rs  decoder.rs  encoder.rs  stream.rs  v1.rs
modules/omnikit/src/service/connection/secure/v1/: auth.rs  decoder.rs  encoder.rs  message.rs  packet.rs  stream.rs  util.rs
modules/omnikit/src/service/converter/: omni_base.rs
modules/omnikit/src/service/remoting/: caller.rs  error.rs  error_message.rs  hello_message.rs  listener.rs  packet_message.rs  result.rs  stream.rs
modules/omnikit/src/service/rpc/: session.rs
modules/omnikit/tests/: secure_swift_interop.rs
modules/omnius/: Cargo.toml
modules/omnius/src/: model.rs  service.rs
modules/omnius/src/model/: omni_addr.rs  omni_hash.rs  omni_sign.rs
modules/omnius/src/service/: connection.rs  util.rs
modules/omnius/src/service/connection/: framed.rs  secure.rs
modules/omnius/src/service/connection/framed/: packet.rs  receiver.rs  sender.rs
modules/omnius/src/service/connection/omni_secure/v1/: auth.rs  message.rs  stream.rs  util.rs
modules/omnius/src/service/connection/secure/: v1.rs
modules/omnius/src/service/connection/secure/v1/: auth.rs  encoder.rs  message.rs
modules/omnius/src/service/rpc/: error.rs  packet.rs
modules/omnius/src/service/util/: cbor.rs
modules/rocketpack/: Cargo.toml
modules/rocketpack/docs/: varint_spec.md
modules/rocketpack/src/: empty_rocket_pack.rs  error.rs  errors.rs  field_type.rs  lib.rs  prelude.rs  primitive.rs  rocket_message.rs  rocket_message_reader.rs  rocket_message_writer.rs  rocket_pack_codec_test.rs  rocket_pack_decoder.rs  rocket_pack_encoder.rs  rocket_pack_struct.rs  timestamp.rs  varint.rs
modules/rocketpack/src/primitive/: timestamp.rs  varint.rs
modules/rocketpack/src/varint/: converter.rs  error.rs
modules/testkit/: Cargo.toml
modules/testkit/src/: error.rs  lib.rs  prelude.rs
modules/testkit/src/containers/: postgres.rs
modules/yamux/: Cargo.toml
modules/yamux/src/: connection.rs  error.rs  lib.rs  stream.rs
src/: image.rs
src/cloud/: secret.rs
src/cloud/secret/aws/: aws_secret_reader.rs
src/image/: exif_reader.rs
