[profile.release]
debug = 1

[workspace]
members = [
  "modules/base",
  "modules/cloud",
  "modules/image",
  "modules/migration",
  "modules/omnikit",
  "modules/rocketpack",
  "modules/testkit",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Lyrise <lyrise1984@gmail.com>"]

[workspace.dependencies]
omnius-core-base = { path = "./modules/base" }
omnius-core-cloud = { path = "./modules/cloud", features = ["aws"] }
omnius-core-image = { path = "./modules/image" }
omnius-core-migration = { path = "./modules/migration", features = [
  "postgres",
] }
omnius-core-omnikit = { path = "./modules/omnikit" }
omnius-core-rocketpack = { path = "./modules/rocketpack" }
omnius-core-testkit = { path = "./modules/testkit" }

aws-smithy-runtime-api = "1.9.0"
aws-config = "1.8.5"
aws-sdk-secretsmanager = "1.90.0"
aws-sdk-s3 = "1.108.0"
aws-sdk-sqs = "1.86.0"
aws-sdk-sesv2 = "1.100.0"

gcloud-sdk = { version = "0.28.2", features = [
  "google-cloud-secretmanager-v1",
] }

rand = "0.9.2"
rand_core = "0.9.3"
rand_chacha = "0.9.0"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros", "headers"] }
axum-extra = "0.10.1"
chrono = "0.4.42"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.145"
testcontainers = "0.25.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4"] }
tokio-util = { version = "0.7.16", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
sqlx = { version = "0.8.6", features = [
  "postgres",
  "sqlite",
  "chrono",
  "json",
  "macros",
  "runtime-tokio-rustls",
] }
tower-http = { version = "0.6.6", features = ["cors"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
ring = "0.17.14"
hex = "0.4.3"
urlencoding = "2.1.3"
axum-aws-lambda = "0.10.0"
lambda_http = "0.16"
hyper = "1.7.0"
tower = "0.5.2"
thiserror = "2.0.17"
jsonwebtoken = "9.3.1"
validator = { version = "0.20.0", features = ["derive"] }
headers = "0.4.1"
once_cell = "1.21.3"
kamadak-exif = "0.6.1"
serial_test = "3.2.0"
proc-macro2 = "1.0.97"
reqwest = { version = "0.12.24", features = ["json"] }
testresult = "0.4.1"
base64 = "0.22.1"
ciborium = "0.2.2"
bitflags = { version = "2.10.0", features = ["serde"] }
tempfile = "3.23.0"
crc = "3.3.0"
sha3 = "0.10.8"
nom = "8.0.0"
fast-socks5 = "0.10.0"
futures = "0.3.31"
futures-util = "0.3.31"
local-ip-address = "0.6.5"
pin-utils = "0.1.0"
hkdf = "0.12.4"
aes-gcm = "0.10.3"
parking_lot = "0.12.5"
x25519-dalek = { version = "=3.0.0-pre.0", features = ["static_secrets"] }
ed25519-dalek = { version = "=3.0.0-pre.0", features = [
  "alloc",
  "rand_core",
  "serde",
  "pkcs8",
] }
