[profile.release]
debug = 1

[workspace]
members = [
  "modules/base",
  "modules/cloud",
  "modules/image",
  "modules/migration",
  "modules/omnikit",
  "modules/rocketpack",
  "modules/testkit",
  "modules/yamux",
  "entrypoints/rocketpack-compiler",
]
exclude = ["entrypoints/rocketpack-compiled-example/rust"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Lyrise <lyrise1984@gmail.com>"]

[workspace.dependencies]
omnius-core-base = { path = "./modules/base" }
omnius-core-cloud = { path = "./modules/cloud", features = ["aws"] }
omnius-core-image = { path = "./modules/image" }
omnius-core-migration = { path = "./modules/migration", features = [
  "postgres",
] }
omnius-core-omnikit = { path = "./modules/omnikit" }
omnius-core-rocketpack = { path = "./modules/rocketpack" }
omnius-core-testkit = { path = "./modules/testkit" }
omnius-core-yamux = { path = "./modules/yamux" }

omnius-core-rocketpack-compiler = { path = "./entrypoints/rocketpack-compiler" }

aws-smithy-runtime-api = "1.11.4"
aws-config = "1.8.14"
aws-sdk-secretsmanager = "1.100.0"
aws-sdk-s3 = "1.123.0"
aws-sdk-sqs = "1.94.0"
aws-sdk-sesv2 = "1.113.0"

gcloud-sdk = { version = "0.30.0", features = [
  "google-cloud-secretmanager-v1",
] }

rand = { version = "0.10.1", features = ["std_rng", "sys_rng", "chacha"] }
rand_core = "0.10.1"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros", "headers"] }
axum-extra = "0.12.5"
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
testcontainers = "0.27.3"
tokio = { version = "1.50.0", features = ["full"] }
tokio-postgres = { version = "0.7.17", features = ["with-chrono-0_4"] }
tokio-util = { version = "0.7.18", features = ["full"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
sqlx = { version = "0.8.6", features = [
  "postgres",
  "sqlite",
  "chrono",
  "json",
  "macros",
  "runtime-tokio-rustls",
] }
tower-http = { version = "0.6.11", features = ["cors"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
ring = "0.17.14"
hex = "0.4.3"
urlencoding = "2.1.3"
axum-aws-lambda = "0.11.0"
lambda_http = "1.0"
hyper = "1.9.0"
tower = "0.5.3"
thiserror = "2.0.18"
jsonwebtoken = "10.3.0"
validator = { version = "0.20.0", features = ["derive"] }
headers = "0.4.1"
once_cell = "1.21.4"
kamadak-exif = "0.6.1"
serial_test = "3.4.0"
proc-macro2 = "1.0.106"
reqwest = { version = "0.13.3", features = ["json"] }
testresult = "0.4.1"
base64 = "0.22.1"
ciborium = "0.2.2"
tempfile = "3.27.0"
crc = "3.3.0"
sha3 = "0.10.9"
nom = "8.0.0"
fast-socks5 = "1.0.0"
futures = "0.3.32"
futures-util = "0.3.31"
local-ip-address = "0.6.10"
pin-utils = "0.1.0"
hkdf = "0.12.4"
aes-gcm = "0.10.3"
parking_lot = "0.12.5"
x25519-dalek = { version = "=3.0.0-pre.6", features = ["static_secrets"] }
ed25519-dalek = { version = "=3.0.0-pre.7", features = [
  "alloc",
  "rand_core",
  "serde",
  "pkcs8",
] }
logos = "0.16.1"
clap = { version = "4.6.1", features = ["wrap_help", "derive"] }
serde_yaml_ng = "0.10.0"
strum = { version = "0.28.0", features = ["derive"] }
enumflags2 = "0.7.12"
yamux = "0.13.10"

[workspace.lints.clippy]
uninlined_format_args = "allow"
