[package]
name = "core-base"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }

[features]
stable-test = []

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
