[package]
name = "omnius-core-cloud"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

aws-config = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-sdk-sesv2 = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
