[package]
name = "core-cloud"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }

[features]
aws = [
    "aws-config",
    "aws-sdk-secretsmanager",
    "aws-sdk-s3",
    "aws-sdk-sqs",
    "aws-sdk-sesv2",
    "aws-config",
]

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

aws-config = { workspace = true, optional = true }
aws-sdk-secretsmanager = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
aws-sdk-sqs = { workspace = true, optional = true }
aws-sdk-sesv2 = { workspace = true, optional = true }

[dev-dependencies]
testcontainers = { workspace = true }
