[package]
name = "omnius-core-cloud"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }

[features]
aws = [
  "aws-smithy-runtime-api",
  "aws-config",
  "aws-sdk-secretsmanager",
  "aws-sdk-s3",
  "aws-sdk-sqs",
  "aws-sdk-sesv2",
  "aws-config",
]
gcp = ["gcloud-sdk"]

[dependencies]
omnius-core-base = { workspace = true }

async-trait = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }

aws-smithy-runtime-api = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-sdk-secretsmanager = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
aws-sdk-sqs = { workspace = true, optional = true }
aws-sdk-sesv2 = { workspace = true, optional = true }

gcloud-sdk = { workspace = true, optional = true }

[dev-dependencies]
testcontainers = { workspace = true }
