[package]
name = "omnius-core-image"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }

[features]
stable-test = []

[dependencies]
omnius-core-base = { workspace = true }

chrono = { workspace = true }
kamadak-exif = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
