[package]
name = "core-migration"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }

[features]
stable-test = []

[dependencies]
core-testkit = { path = "../testkit" }

anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serial_test = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
