[package]
name = "core-migration"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }

[features]
stable-test = []
postgres = ["tokio-postgres"]

[dependencies]
core-testkit = { path = "../testkit" }

anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serial_test = { workspace = true }

tokio-postgres = { workspace = true, optional = true }

[dev-dependencies]
testcontainers = { workspace = true }
