[package]
name = "omnius-core-migration"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }

[features]
stable-test = []
postgres = ["tokio-postgres"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serial_test = { workspace = true }
tokio-postgres = { workspace = true, optional = true }

[dev-dependencies]
omnius-core-testkit = { workspace = true }
testcontainers = { workspace = true }
testresult = { workspace = true }
