[package]
name = "omnius-core-omnikit"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }

[features]
stable-test = []

[dependencies]
omnius-core-base = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
config = { workspace = true }
ring = { workspace = true }
hex = { workspace = true }
urlencoding = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serial_test = { workspace = true }
pin-utils = { workspace = true }
nom = { workspace = true }
fast-socks5 = { workspace = true }
rand_core = { workspace = true }
sha3 = { workspace = true }
ciborium = { workspace = true }
bitflags = { workspace = true }
tempfile = { workspace = true }
crc = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
hkdf = { workspace = true }
aes-gcm = { workspace = true }
parking_lot = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testresult = { workspace = true }
