[package]
name = "omnius-core-testkit"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }

[features]
stable-test = []

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
kamadak-exif = "0.5.5"
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
testcontainers = { workspace = true }

[dev-dependencies]
